--- a/index.html
+++ b/index.html
@@ -2,96 +2,117 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Our take on: Rekupe - Los Angeles Based Web Design Agency</title>
 </head>
 <body>
-<section class="header">
-    <h1>Your website is an investment in the success of your business.</h1>
-    <h3>We are here to help you succeed.</h3>
-    <h4>Let's work together</h4>
+
+<section class="site-header">
+    <nav class="nav-menu">
+        <ul>
+            <li>Case Studies</li>
+            <li>Services</li>
+            <li>Contact Us</li>
+        </ul>
+    </nav>
+    <div class="header-slogan">
+
+        <h1>Your website is an investment in the success of your business.</h1>
+        <h3>We are here to help you succeed.</h3>
+        <a href="#contact-form" class="the-button">Let's work together</a>
+    </div>
+    <img class="header-img-squiggle" src="/assets/squiggle_line_stripe.svg" alt="squiggly line with stripe below">
+
 </section>
+
 <section class="about-us">
-    <div>
+    <div class="company-description">
         <p>Rekupe is a digital agency in Los Angeles. </p>
         <p>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow. </p>
         <p>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences. </p>
-        <p class="questions">Have a question? Click here to contact us!</p>
+    </div>
+    <div class="questions">
+    <p>Have a question? <a href="#contact-form">Click here</a> to contact us!</p>
     </div>
 </section>
-<section class="portfolio">
-    <article>
-        <h2>Rolling Stone</h2>
-        <p class="portfolio-article">
-            You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.
-        </p>
-    </article>
-    <article class="portfolio">
-        <h2>Variety</h2>
-            <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
 
-    </article>
-    <article class="portfolio">
-        <h2>Worth</h2>
-            <p>A global media platform connecting a community that embraces worth beyond wealth.</p>
 
-    </article>
 
+
+<!--<section class="portfolio">-->
+<!--    <article>-->
+<!--        <h2>Rolling Stone</h2>-->
+<!--        <p class="portfolio-article">-->
+<!--            You know Rolling Stone. It’s the definitive voice in music, politics and culture. It’s a global icon.-->
+<!--        </p>-->
+<!--    </article>-->
+<!--    <article class="portfolio">-->
+<!--        <h2>Variety</h2>-->
+<!--            <p>Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>-->
+
+<!--    </article>-->
+<!--    <article class="portfolio">-->
+<!--        <h2>Worth</h2>-->
+<!--            <p>A global media platform connecting a community that embraces worth beyond wealth.</p>-->
+
+<!--    </article>-->
+
+<!--</section>-->
+<!--<section class="our-services">-->
+<!--    <article class="services-article">-->
+<!--        <img src="" alt="">-->
+<!--        <h3>Web Design</h3>-->
+<!--        <p>Good web design is how companies stand out from their competitors. High quality web design leads to increased user conversion and engagement. Through a proven web design process, we help clients launch websites and products that improve on their bottom line.</p>-->
+
+<!--    </article>-->
+<!--    <article class="services-article">-->
+<!--        <img src="" alt="">-->
+<!--        <h3>Web Development</h3>-->
+<!--        <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites with a mobile first approach and ensure that our code quality is clean, organized and performant. Already have a design but need it developed? We’re here to help!</p>-->
+
+<!--    </article>-->
+<!--    <article class="services-article">-->
+<!--        <img src="" alt="">-->
+<!--        <h3>User Experience</h3>-->
+<!--        <p>In order to build successful products you have to understand the user. We create user personas, wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape the product and can quickly eliminate potential risks – saving you time and money.</p>-->
+
+<!--    </article>-->
+<!--    <article class="services-article">-->
+<!--        <img src="" alt="">-->
+<!--        <h3>Logo Design + Branding</h3>-->
+<!--        <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a clear and unique point of view. We will work with you to understand your vision and help create a unique brand identity and style guide for your company.</p>-->
+
+<!--    </article>-->
+<!--    <article class="services-article">-->
+<!--        <img src="" alt="">-->
+<!--        <h3>SEO</h3>-->
+<!--        <p>Do you want your site to rank higher in search results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure your website it optimized, providing you the best opportunities for organic search exposure.</p>-->
+
+<!--    </article>-->
+<!--    <article class="services-article">-->
+<!--        <img src="" alt="">-->
+<!--        <h3>Copy Writing</h3>-->
+<!--        <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We work with you to establish your brand bible and ensure your messaging is focused and targeted.</p>-->
+
+<!--    </article>-->
+
+<!--</section>-->
+<section class="contact-form" id="contact-form">
+<!--    <div>-->
+<!--        <h2>Let's work together</h2>-->
+<!--        <p>Have a question? Need a quote? Let us know!</p>-->
+<!--    <form onsubmit="this.requires.javascript"></form>-->
+<!--    <label for="name">Name-->
+<!--        <input type="text" id="name">-->
+<!--    </label>-->
+<!--    <label for="email">Email-->
+<!--        <input type="email" id="email">-->
+<!--    </label>-->
+<!--    <label for="message">Message-->
+<!--        <textarea id="message">Message</textarea></label>-->
+<!--    </div>-->
 </section>
-<section class="our-services">
-    <article class="services-article">
-        <img src="" alt="">
-        <h3>Web Design</h3>
-        <p>Good web design is how companies stand out from their competitors. High quality web design leads to increased user conversion and engagement. Through a proven web design process, we help clients launch websites and products that improve on their bottom line.</p>
-
-    </article>
-    <article class="services-article">
-        <img src="" alt="">
-        <h3>Web Development</h3>
-        <p>Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites with a mobile first approach and ensure that our code quality is clean, organized and performant. Already have a design but need it developed? We’re here to help!</p>
-
-    </article>
-    <article class="services-article">
-        <img src="" alt="">
-        <h3>User Experience</h3>
-        <p>In order to build successful products you have to understand the user. We create user personas, wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape the product and can quickly eliminate potential risks – saving you time and money.</p>
-
-    </article>
-    <article class="services-article">
-        <img src="" alt="">
-        <h3>Logo Design + Branding</h3>
-        <p>Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a clear and unique point of view. We will work with you to understand your vision and help create a unique brand identity and style guide for your company.</p>
-
-    </article>
-    <article class="services-article">
-        <img src="" alt="">
-        <h3>SEO</h3>
-        <p>Do you want your site to rank higher in search results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure your website it optimized, providing you the best opportunities for organic search exposure.</p>
-
-    </article>
-    <article class="services-article">
-        <img src="" alt="">
-        <h3>Copy Writing</h3>
-        <p>Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We work with you to establish your brand bible and ensure your messaging is focused and targeted.</p>
-
-    </article>
-
-</section>
-<section class="contact-form">
-    <div>
-        <h2>Let's work together</h2>
-        <p>Have a question? Need a quote? Let us know!</p>
-    <form onsubmit="this.requires.javascript"></form>
-    <label for="name">Name
-        <input type="text" id="name">
-    </label>
-    <label for="email">Email
-        <input type="email" id="email">
-    </label>
-    <label for="message">Message
-        <textarea id="message">Message</textarea></label>
-    </div>
-</section>
-<footer>
+<footer class="page-footer">
     <p>Business website opdracht © NOVI Hogeschool 2022 / Willy Vaessen</p>
 </footer>
 </body>
